--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
-
 [package]
 name = "adblock"
-version = "0.3.1"
-authors = ["Huy Nguyen <huynq.cntt@gmail.com>"]
+version = "0.3.2"
+authors = ["Huy Nguyen <huynq.cntt@gmail.com>", "Huynq <huynq@hnq.vn>"]
 edition = "2018"
 
 description = "Native Rust module for Adblock Plus syntax (e.g. EasyList, EasyPrivacy) filter parsing and matching."
@@ -25,8 +24,6 @@ features = ["default-docs-rs"]
 addr = { version = "0.2", optional = true }
 url = "2.1"
 percent-encoding = "2.1"
-matches = "0.1"
-lazy_static = "1.4"
 once_cell = "1.4"
 regex = "1"
 bitflags = "1.2"
@@ -38,10 +35,10 @@ seahash = "3"
 twoway = "0.2"
 base64 = "0.10"
 rmp-serde = "0.13.7"    # rmp-serde 0.14.0 breaks deserialization by changing how enums are deserialized
-hashbrown = { version = "0.6", features = ["serde"] }
 lifeguard = { version = "0.6", optional = true }
 cssparser = { version = "0.25", optional = true }
 selectors = { version = "0.21", optional = true }
+serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
 criterion = "0.2"
@@ -88,5 +85,6 @@ metrics = []
 full-regex-handling = []
 object-pooling = ["lifeguard"]
 css-validation = ["cssparser", "selectors"]
+content-blocking = ["serde_json"]
 embedded-domain-resolver = ["addr"] # Requires setting an external domain resolver if disabled.
 docs-rs-incompatible = ["embedded-domain-resolver"] # addr prevents docs.rs builds, see https://github.com/rust-lang/docs.rs/issues/904
